--- a/mobile2fa/Linq2FA/app/src/main/AndroidManifest.xml
+++ b/mobile2fa/Linq2FA/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -127,7 +127,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
