--- a/mobile2fa/Linq2FA/app/build.gradle
+++ b/mobile2fa/Linq2FA/app/build.gradle
@@ -24,4 +24,15 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.google.zxing:android-core:3.1.0'
+    compile files('libs/activation.jar')
+    compile files('libs/additionnal.jar')
+    compile files('libs/android-sun-jarsign-support-1.1.jar')
+    compile files('libs/core-1.52.0.0.jar')
+    compile files('libs/javamail-crypto_060622.jar')
+    compile files('libs/mail-1.52.0.0.jar')
+    compile files('libs/mail.jar')
+    compile files('libs/pg-1.52.0.0.jar')
+    compile files('libs/pkix-1.52.0.0.jar')
+    compile files('libs/prov-1.52.0.0.jar')
+    compile files('libs/spongyCastleHandlers.jar')
 }
