--- a/mobile2fa/Linq2FA/app/build.gradle
+++ b/mobile2fa/Linq2FA/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile files('libs/pkix-1.52.0.0.jar')
     compile files('libs/prov-1.52.0.0.jar')
     compile files('libs/spongyCastleHandlers.jar')
+    compile 'com.google.code.gson:gson:2.5'
 }
