--- a/mobile2fa/Linq2FA/app/src/main/AndroidManifest.xml
+++ b/mobile2fa/Linq2FA/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sa.com.is.activity" >
+    package="sa.com.nadec.milk" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -55,7 +55,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
-        android:label="@string/app_name"
+        android:label="@string/appname"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.google.zxing.client.android.CaptureActivity"
@@ -126,9 +126,9 @@
 
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:icon="@drawable/logo"
-            android:label="@string/app_name">
+            android:label="@string/appname">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
