Implementing the System Manager

--- a/mobile2fa/Linq2FA/app/build.gradle
+++ b/mobile2fa/Linq2FA/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'nadec.com.sa.milk.fa'
         minSdkVersion 14
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName '1.2'
     }
     buildTypes {
         nadec {
