Finishing the entire system for Nadec

--- a/mobile2fa/Linq2FA/app/build.gradle
+++ b/mobile2fa/Linq2FA/app/build.gradle
@@ -7,14 +7,19 @@ android {
         applicationId 'nadec.com.sa.milk.fa'
         minSdkVersion 14
         targetSdkVersion 22
-        versionCode 3
-        versionName '1.2'
+        versionCode 6
+        versionName '1.3'
     }
     buildTypes {
         nadec {
         }
     }
     productFlavors {
+    }
+
+    lintOptions{
+
+        abortOnError false
     }
 }
 
