Finishing the entire system for Nadec

--- a/mobile2fa/Linq2FA/app/src/main/AndroidManifest.xml
+++ b/mobile2fa/Linq2FA/app/src/main/AndroidManifest.xml
@@ -127,6 +127,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:icon="@drawable/logo"
+            android:windowSoftInputMode="adjustPan|stateHidden"
             android:label="@string/appname">
 
             <intent-filter>
