--- a/mobile2fa/Linq2FA/app/build.gradle
+++ b/mobile2fa/Linq2FA/app/build.gradle
@@ -1,10 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+    }
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
     defaultConfig {
-        applicationId 'nadec.com.sa.milk.fa'
+        applicationId 'linq2fa.is.com.sa.fa'
         minSdkVersion 14
         targetSdkVersion 22
         versionCode 9
@@ -16,8 +18,7 @@ android {
     }
     productFlavors {
     }
-
-    lintOptions{
+    lintOptions {
 
         abortOnError false
     }
