--- a/mobile2fa/Linq2FA/app/src/main/AndroidManifest.xml
+++ b/mobile2fa/Linq2FA/app/src/main/AndroidManifest.xml
@@ -130,11 +130,23 @@
             android:windowSoftInputMode="adjustPan|stateHidden"
             android:label="@string/appname">
 
+           <!-- <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+
+        </activity>
+
+        <activity
+            android:name=".activity.SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
 
         </activity>
     </application>
